# NursingRecordCompletion_train

./: README.md  api_server.py  gpt2_5000.py  gpt2_ok.py  gpt2_ok_all.py  model_api.js  護理紀錄系統demo.html
step1/: gpt2_5%.py  gpt2_all.py  gpt2_ok.py  step1.md
step2/: Qwen3-0.6  TinyLlama-1.1B.py  evaluate.py  generate.py  gpt2_new.py  opt-350M.py  prepare_data.py  step1_extra.md  step2.md
step3/: TinyLlama-1.1B_train2.py  split_data.py
step6/: UI.html
step7/: Dockerfile  abbreviations.py  api_server.py  model_api.js  preprocess.py  requirements.txt  護理紀錄系統demo.html  護理紀錄系統demo1.html
step7/pre/: pyproject.toml
